--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,9 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "google-auth-library": "^8.8.0",
-    "googleapis": "^118.0.0",
+    "googleapis": "^162.0.0",
     "helmet": "^7.0.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
